TASK-44775 Add additional JDK 11 properties
(cherry picked from commit 3d7f7fe788689b58fd9a88b4865f1e8ac30cb664)